fix table size and align paginator

--- a/src/app/publisheddata/publisheddata-table/publisheddata-table.component.scss
+++ b/src/app/publisheddata/publisheddata-table/publisheddata-table.component.scss
@@ -5,3 +5,11 @@
   .mat-cell {
     padding: 8px 8px 8px 0;
   }
+
+  .paginator_table {
+    width: 800px;
+  }
+
+  .mat-elevation-z8 {
+    width: 790px;
+  }
